--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
     <main>
         <nav>
             <div class="logo">
-                <img src="http://10.0.8.26:3433/static/media/logo.cc64fdac.svg" alt="logo">
+                <img src="logo.svg" alt="logo">
             </div>
             <div class="hr">
                 <hr>
