--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
         <strong>usuario.nome</strong>
         <svg class="MuiSvgIcon-root" focusable="false" viewBox="0 0 24 24" aria-hidden="true"><path d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"></path></svg>        
         <div class="avatar">
-            <img src="http://10.0.8.26:3433/static/media/profile_avatar_default.4788048f.png">
+            <img src="./profile_avatar_default.png">
         </div>
 
         <div class="alert">
@@ -212,7 +212,7 @@
     <main>
         <nav>
             <div class="logo">
-                <img src="logo.svg" alt="logo">
+                <img src="./logo.svg" alt="logo">
             </div>
             <div class="hr">
                 <hr>
