--- a/index.html
+++ b/index.html
@@ -38,8 +38,7 @@
             box-sizing: border-box;
             flex-shrink: 0;
             flex-direction: row;
-            box-shadow: 0px 2px 4px -1px rgb(0 0 0 / 20%), 0px 4px 5px 0px rgb(0 0 0 / 14%), 0px 1px 10px 0px rgb(0 0 0 / 12%);
-            margin-bottom: 10px;
+            /* box-shadow: 0px 2px 4px -1px rgb(0 0 0 / 20%), 0px 4px 5px 0px rgb(0 0 0 / 14%), 0px 1px 10px 0px rgb(0 0 0 / 12%); */
             font-weight: normal;
             font-size: 12px;
             color: rgb(226, 226, 226);
@@ -78,7 +77,7 @@
         }
 
         iframe {
-            margin-left: 245px;
+            margin-left: 238px;
         }
 
         .logo {
@@ -183,12 +182,23 @@
             height: 100%;
             width: 60px;
         }
+
+        .div {
+            position: absolute;
+            top: 0px;
+            height: 64px;
+            background-color: white;
+            width: 100%;
+            border: 0px;
+            box-shadow: 0px 2px 4px -1px rgb(0 0 0 / 20%), 0px 4px 5px 0px rgb(0 0 0 / 14%), 0px 1px 10px 0px rgb(0 0 0 / 12%);
+        }
     </style>
 
     <title>CRM</title>
 </head>
 
 <body>
+    <div class="div"></div>
 
     <header>
         <div class="home">
@@ -208,6 +218,7 @@
             <svg focusable="false" viewBox="0 0 24 24" aria-hidden="true" style="fill: rgb(255, 87, 87);"><path d="M12 22c1.1 0 2-.9 2-2h-4c0 1.1.89 2 2 2zm6-6v-5c0-3.07-1.64-5.64-4.5-6.32V4c0-.83-.67-1.5-1.5-1.5s-1.5.67-1.5 1.5v.68C7.63 5.36 6 7.92 6 11v5l-2 2v1h16v-1l-2-2z"></path></svg>            
         </div>
     </header>
+
 
     <main>
         <nav>
