--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
             margin: 0 16px;
         }
 
-        .img.casa {
+        .img.select {
             fill: #CD9A33 !important;
         }
 
@@ -140,7 +140,7 @@
             font-size: 1rem;
         }
 
-        .label.casa {
+        .label.select {
             color: #FFF !important;
             font-weight: 600;
         }
@@ -149,7 +149,7 @@
             z-index: 1102;
             position: absolute;
             top: 65px;
-            right: -19px;
+            right: -21px;
             cursor: pointer;
         }
 
@@ -268,27 +268,23 @@
                         </span>
                     </li>
                     <li class="item">
-                        <span class="img">
+                        <span class="img select">
                             <svg width="24" height="24" xmlns="http://www.w3.org/2000/svg" fill-rule="evenodd"
                                 clip-rule="evenodd">
                                 <path
                                     d="M12.628 21.412l5.969-5.97 1.458 3.71-12.34 4.848-4.808-12.238 9.721 9.65zm-1.276-21.412h-9.352v9.453l10.625 10.547 9.375-9.375-10.648-10.625zm4.025 9.476c-.415-.415-.865-.617-1.378-.617-.578 0-1.227.241-2.171.804-.682.41-1.118.584-1.456.584-.361 0-1.083-.408-.961-1.218.052-.345.25-.697.572-1.02.652-.651 1.544-.848 2.276-.106l.744-.744c-.476-.476-1.096-.792-1.761-.792-.566 0-1.125.227-1.663.677l-.626-.627-.698.699.653.652c-.569.826-.842 2.021.076 2.938 1.011 1.011 2.188.541 3.413-.232.6-.379 1.083-.563 1.475-.563.589 0 1.18.498 1.078 1.258-.052.386-.26.763-.621 1.122-.451.451-.904.679-1.347.679-.418 0-.747-.192-1.049-.462l-.739.739c.463.458 1.082.753 1.735.753.544 0 1.087-.201 1.612-.597l.54.538.697-.697-.52-.521c.743-.896 1.157-2.209.119-3.247zm-9.678-7.476c.938 0 1.699.761 1.699 1.699 0 .938-.761 1.699-1.699 1.699-.938 0-1.699-.761-1.699-1.699 0-.938.761-1.699 1.699-1.699z" />
                             </svg>
                         </span>
-                        <span class="label">Tabela de Preços</span>
-                        <span class="imgr">
-                            <svg focusable="false" viewBox="0 0 24 24" aria-hidden="true">
-                                <path d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"></path>
-                            </svg>
-                        </span>
+                        <span class="label select">Tabela de Preços</span>
+
                     </li>
                     <li class="item">
-                        <span class="img casa">
+                        <span class="img">
                             <svg focusable="false" viewBox="0 0 24 24" aria-hidden="true">
                                 <path d="M10 20v-6h4v6h5v-8h3L12 3 2 12h3v8z"></path>
                             </svg>
                         </span>
-                        <span class="label casa">Início</span>
+                        <span class="label">Início</span>
                     </li>
                 </ul>
             </div>
