--- a/index.html
+++ b/index.html
@@ -88,18 +88,18 @@
                         </span>
                         <span class="label">Tabela de Preços</span>
                     </li>
-                    <li class="item" id="diario">
+                    <li class="item" id="diarias">
                         <span class="img select">
                             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
                                 <path
-                                    d="M18 15.422v.983c0 .771-1.862 1.396-4 1.396s-4-.625-4-1.396v-.983c.968.695 2.801.902 4 .902 1.202 0 3.035-.208 4-.902zm-4-1.363c-1.202 0-3.035-.209-4-.902v.973c0 .771 1.862 1.396 4 1.396s4-.625 4-1.396v-.973c-.968.695-2.801.902-4 .902zm0-5.86c-2.138 0-4 .625-4 1.396 0 .77 1.862 1.395 4 1.395s4-.625 4-1.395c0-.771-1.862-1.396-4-1.396zm0 3.591c-1.202 0-3.035-.209-4-.902v.977c0 .77 1.862 1.395 4 1.395s4-.625 4-1.395v-.977c-.968.695-2.801.902-4 .902zm-.5-9.79c-5.288 0-9.649 3.914-10.377 9h-3.123l4 5.917 4-5.917h-2.847c.711-3.972 4.174-7 8.347-7 4.687 0 8.5 3.813 8.5 8.5s-3.813 8.5-8.5 8.5c-3.015 0-5.662-1.583-7.171-3.957l-1.2 1.775c1.916 2.536 4.948 4.182 8.371 4.182 5.797 0 10.5-4.702 10.5-10.5s-4.703-10.5-10.5-10.5z" />
+                                    d="M3 18h-2c-.552 0-1-.448-1-1v-2h15v-9h4.667c1.117 0 1.6.576 1.936 1.107.594.94 1.536 2.432 2.109 3.378.188.312.288.67.288 1.035v4.48c0 1.121-.728 2-2 2h-1c0 1.656-1.344 3-3 3s-3-1.344-3-3h-6c0 1.656-1.344 3-3 3s-3-1.344-3-3zm3-1.2c.662 0 1.2.538 1.2 1.2 0 .662-.538 1.2-1.2 1.2-.662 0-1.2-.538-1.2-1.2 0-.662.538-1.2 1.2-1.2zm12 0c.662 0 1.2.538 1.2 1.2 0 .662-.538 1.2-1.2 1.2-.662 0-1.2-.538-1.2-1.2 0-.662.538-1.2 1.2-1.2zm-4-2.8h-14v-10c0-.552.448-1 1-1h12c.552 0 1 .448 1 1v10zm3-6v3h4.715l-1.427-2.496c-.178-.312-.509-.504-.868-.504h-2.42z"/>
                             </svg>
                         </span>
-                        <span class="label select">Diário Estoque</span>
+                        <span class="label select">Diárias</span>
                     </li>                   
                 </ul>
             </div>
-            
+
             <span class="navbutton"><svg width="16" height="68" viewBox="0 0 16 68" fill="none"
                     xmlns="http://www.w3.org/2000/svg">
                     <mask id="mask0" mask-type="alpha" maskUnits="userSpaceOnUse" x="0" y="0" width="16" height="68">
@@ -120,8 +120,8 @@
             frameborder="0" allowFullScreen="true">
         </iframe>
 
-        <iframe id="fr-diario" title="Diário" width="1136" height="580" style="display: none;"
-            src="https://app.powerbi.com/reportEmbed?reportId=21a0c058-2639-46c0-9115-e368ac19a571&groupId=8a0cbe8f-cd83-4f59-bfe5-9591fdfc14e3&autoAuth=true&ctid=a67f074e-4e9f-4941-a52d-1b388419ab34&config=eyJjbHVzdGVyVXJsIjoiaHR0cHM6Ly93YWJpLWJyYXppbC1zb3V0aC1yZWRpcmVjdC5hbmFseXNpcy53aW5kb3dzLm5ldC8ifQ%3D%3D&filterPaneEnabled=false&navContentPaneEnabled=false"
+        <iframe id="fr-diarias" title="Diárias" width="1100" height="620" style="display: none;"
+            src="https://app.powerbi.com/reportEmbed?reportId=6e6b3a15-dd44-4132-beee-3cebba79ecff&autoAuth=true&ctid=a67f074e-4e9f-4941-a52d-1b388419ab34&config=eyJjbHVzdGVyVXJsIjoiaHR0cHM6Ly93YWJpLWJyYXppbC1zb3V0aC1yZWRpcmVjdC5hbmFseXNpcy53aW5kb3dzLm5ldC8ifQ%3D%3D&filterPaneEnabled=false&navContentPaneEnabled=false"
             frameborder="0" allowFullScreen="true">
         </iframe>     
 
@@ -135,12 +135,12 @@
             var labels = document.querySelectorAll('.label');
             var imgr = document.querySelectorAll('.imgr');
             var home = document.querySelector('.home');
-            var frDiario = document.querySelector('#fr-diario');
+            var frDiarias = document.querySelector('#fr-diarias');
             var frTabela = document.querySelector('#fr-tabela');
-            var menuDiario = document.querySelector('#diario');
+            var menuDiarias = document.querySelector('#diarias');
             var menuTabela = document.querySelector('#tabela');
 
-            frDiario.style.display = 'block';
+            frDiarias.style.display = 'block';
 
             navbutton.addEventListener('click', function (e) {
                 if(nav.style.width === '60px') {
@@ -149,8 +149,8 @@
                     imgr.forEach(e => e.classList.remove('hidden'));
                     logo.style.width = '128px';
                     home.style.left = '240px';
-                    frDiario.style.marginLeft = '238px'
-                    frDiario.setAttribute('width','1136');
+                    frDiarias.style.marginLeft = '238px'
+                    frDiarias.setAttribute('width','1136');
                     frTabela.style.marginLeft = '238px'
                     frTabela.setAttribute('width','1136');
                 }else {
@@ -159,27 +159,27 @@
                     imgr.forEach(e => e.classList.add('hidden'));
                     logo.style.width = '46px'
                     home.style.left = '50px';
-                    frDiario.style.marginLeft = '62px';
-                    frDiario.setAttribute('width','1200');
+                    frDiarias.style.marginLeft = '62px';
+                    frDiarias.setAttribute('width','1200');
                     frTabela.style.marginLeft = '62px';
                     frTabela.setAttribute('width','1200');
                }
             })
             
-            menuDiario.addEventListener('click', function (ev) {
-                frDiario.style.display = 'block';
+            menuDiarias.addEventListener('click', function (ev) {
+                frDiarias.style.display = 'block';
                 frTabela.style.display = 'none';
-                menuDiario.querySelector('.img').classList.add('select');
-                menuDiario.querySelector('.label').classList.add('select');
+                menuDiarias.querySelector('.img').classList.add('select');
+                menuDiarias.querySelector('.label').classList.add('select');
                 menuTabela.querySelector('.img').classList.remove('select');
                 menuTabela.querySelector('.label').classList.remove('select');
             });
 
             menuTabela.addEventListener('click', function (ev) {
-                frDiario.style.display = 'none';
+                frDiarias.style.display = 'none';
                 frTabela.style.display = 'block';
-                menuDiario.querySelector('.img').classList.remove('select');
-                menuDiario.querySelector('.label').classList.remove('select');
+                menuDiarias.querySelector('.img').classList.remove('select');
+                menuDiarias.querySelector('.label').classList.remove('select');
                 menuTabela.querySelector('.img').classList.add('select');
                 menuTabela.querySelector('.label').classList.add('select');
             });
